# hamza

./: .gitignore  BuildDocs.py  CMakeLists.txt  LICENSE  LICENSE.TXT  README.md  TODO.md  amd64-clang-windows.ini  amd64-tcc-windows.ini  build_docs.py  compile_commands.json  gen-docs.py  generate_ucd_headers.c  hz.c  hz.h  hz_defs.h  hz_gl4_curve_to_sdf_vertex_shader.h  main.c  main.cpp  meson.build  meson.options  mkdocs.yml  update_ucd_ftp.c
.github/: FUNDING.yml
ND/Working Data/: Files.nd  Project.nd
ND/Working Data/Output/: Config.nd  SearchIndex.nd
UCD/14.0.0/ucd/: BidiCharacterTest.txt
demo/: hz_demo.c
demos/gl3/: CMakeLists.txt  embed_shaders.py  hz_gl3.c  hz_gl3.h  hz_gl3_glsl_shaders.h  main.c
demos/gl3/glad/include/glad/: glad.h
demos/gl3/glad/src/: glad.c
demos/gl3/shaders/: char_quad.frag  char_quad.vert  curve_to_sdf.frag  curve_to_sdf.vert  fs_triangle.frag  fs_triangle.vert  stencil_kokojima.frag  stencil_kokojima.vert
demos/gl4/: CMakeLists.txt  curve_to_sdf.frag  curve_to_sdf.vert  embed_shaders.py  embed_spirv.py  hz_gl4.h  hz_gl4_char_quad_fragment_shader.h  hz_gl4_char_quad_vertex_shader.h  hz_gl4_curve_to_sdf_fragment_shader.h  hz_gl4_curve_to_sdf_vertex_shader.h  hz_gl4_fs_triangle_fragment_shader.h  hz_gl4_fs_triangle_vertex_shader.h  hz_gl4_stencil_kokojima_fragment_shader.h  hz_gl4_stencil_kokojima_vertex_shader.h  main.c
demos/gl4/glad/include/glad/: glad.h
demos/gl4/glad/src/: glad.c
demos/gl4/shaders/: char_quad.frag  char_quad.vert  curve_to_sdf.frag  curve_to_sdf.vert  fs_triangle.frag  fs_triangle.vert  stencil_kokojima.frag  stencil_kokojima.vert
demos/stbtt_rasterize/: CMakeLists.txt  main.c
demos/vulkan/: compile.bat  hz_renderer_vulkan.c
demos/vulkan/glsl/: bezier_mask.vert  bezier_to_sdf.frag
demos/vulkan/shaders/: bezier_to_sdf.vert
docs/: advanced-usage.md  basic-usage.md  emojis.md  getting-started.md  index.html  index.md
docs/classes/C/: HzFace-Summary.js  HzFace-SummaryToolTips.js  HzFace.html  HzFont-Summary.js  HzFont-SummaryToolTips.js  HzFont-ToolTips.js  HzFont.html  HzGlyphAttribFlags-Summary.js  HzGlyphAttribFlags-SummaryToolTips.js  HzGlyphAttribFlags.html  HzStream-Summary.js  HzStream-SummaryToolTips.js  HzStream-ToolTips.js  HzStream.html  hz_allocator_t-Summary.js  hz_allocator_t-SummaryToolTips.js  hz_allocator_t-ToolTips.js  hz_allocator_t.html  hz_blob_t-Summary.js  hz_blob_t-SummaryToolTips.js  hz_blob_t-ToolTips.js  hz_blob_t.html  hz_buffer_t-Summary.js  hz_buffer_t-SummaryToolTips.js  hz_buffer_t-ToolTips.js  hz_buffer_t.html  (+66 more)
docs/files/: hz-c-Summary.js  hz-c-SummaryToolTips.js  hz-c-ToolTips.js  hz-c.html  hz-data-tables-h-Summary.js  hz-data-tables-h-SummaryToolTips.js  hz-data-tables-h.html  hz-h-Summary.js  hz-h-SummaryToolTips.js  hz-h-ToolTips.js  hz-h.html
docs/index/: Classes.html  Constants.html  Files.html  Functions.html  General.html  Types.html
docs/javascript/: searchdata.js
docs/menu/: classes.js  files.js  tabs.js
docs/other/: home.html
docs/search/: ClassesH.html  FilesH.html  GeneralE.html  GeneralH.html  TypesH.html  index.js
docs/styles/: main.css
docs/stylesheets/: extra.css
example/: shaping-test.c  shaping_test.c  stb_image_write.h
guru/: gen-arabic-joining-list.py  guru-array.c  guru-array.h  guru-base.h  guru-freetype.h  guru-ot-complex-arabic.c  guru-ot.c  guru-ot.h  guru-set.c  guru-set.h  guru.c  guru.h
hamim/: gen-arabic-joining-list.py  hm-array.c  hm-array.h  hm-base.h  hm-ft.h  hm-map.c  hm-map.h  hm-ot-shape-complex-arabic-joining-list.h  hm-ot-shape-complex-arabic.c  hm-ot-shape-complex-arabic.h  hm-ot.c  hm-ot.h  hm-set.c  hm-set.h  hm.c  hm.h
hz/: hz-data-tables.h  hz-fixed.h  hz-glyph-cache.c  hz-glyph-cache.h  hz-old.c  hz.c  hz.h  hz_config.h  hz_data_tables.h  hz_defs.h  hz_glyph_cache.c  hz_glyph_cache.h  hz_msvc_rt_less.c  hz_ucd_10_0_0.h  hz_ucd_11_0_0.h  hz_ucd_12_0_0.h  hz_ucd_12_1_0.h  hz_ucd_13_0_0.h  hz_ucd_14_0_0.h  hz_ucd_15_0_0.h  hz_ucd_4_1_0.h  hz_ucd_5_0_0.h  hz_ucd_5_1_0.h  hz_ucd_5_2_0.h  hz_ucd_6_0_0.h  hz_ucd_6_1_0.h  hz_ucd_6_2_0.h  hz_ucd_6_3_0.h  hz_ucd_7_0_0.h  hz_ucd_8_0_0.h  hz_ucd_9_0_0.h  hzconfig.h  stb_truetype.h
hz/backends/: hz-vulkan.c  hz-vulkan.h  hz_renderer_gles2.h  hz_renderer_vulkan.c  hz_renderer_vulkan.h  hz_vulkan.c  hz_vulkan.h
hz/ucd/: hz_ucd_11_0_0.h  hz_ucd_12_0_0.h  hz_ucd_15_0_0.h  hz_ucd_5_0_0.h  hz_ucd_5_1_0.h  hz_ucd_5_2_0.h  hz_ucd_6_3_0.h  hz_ucd_7_0_0.h  hz_ucd_8_0_0.h  hz_ucd_9_0_0.h
natural-docs/: Menu.txt  Project.txt  base.css
natural-docs/Data/: ClassHierarchy.nd  ConfigFileInfo.nd  FileInfo.nd  ImageFileInfo.nd  IndexInfo.nd  PreviousMenuState.nd  SymbolTable.nd
natural-docs/Working Data/: CodeDB.nd  Files.nd  Project.nd
nd-config/: Project.txt  base.css
nd-config/Data/: IndexInfo.nd  PreviousMenuState.nd  PreviousSettings.nd
nd-config/Working Data/: CodeDB.nd  Files.nd  Project.nd
nd-project/: Project.txt  base.css
nd-project/Working Data/: CodeDB.nd  Files.nd  Languages.nd  Project.nd
resources/: manifest.rc
src/: #hz-ot.c#  .#hz-ot.c  cmas.h  gen-arabic-joining-list.py  hz-array.h  hz-base.h  hz-face.c  hz-face.h  hz-font.c  hz-font.h  hz-ft.h  hz-map.h  hz-ot-language-list.h  hz-ot-shape-complex-arabic-joining-list.h  hz-ot-shape-complex-arabic.c  hz-ot-shape-complex-arabic.h  hz-ot.c  hz-ot.h  hz-script-table.h  hz-set.h  hz.c  hz.h  ot-language-tags.html  ot-language-tags.txt
src/py/: gen-arabic-joining-list.py  gen-ot-language-list.py  gen-ot-language-tag-list.py  gen-script-table.py
src/util/: hz-allocator.h  hz-array.c  hz-array.h  hz-blob.c  hz-blob.h  hz-buf.c  hz-buf.h  hz-map.c  hz-map.h  hz-set.c  hz-set.h
tests/: CMakeLists.txt  shaping_test.c  utf-parser-bench.c  utf_decoder_test  utf_decoder_test.c  utf_decoder_tests.c
tests/utf-8-test-files/: andrew-jackson-wikipedia-china.html  arabic-wiki.html  hindi-wiki.html  islam-wikipedia-arabic.html  islam-wikipedia-china.html  mandarin-wiki.html  neal-dow-wikipedia-china.html
tests/utf-8-test-files/neal-dow-wikipedia-china_files/: load.php  load_002.css  load_003.css
(+48 files in other folders)
